IGNITE-20124 Investigation.